Many changes for better mobile experience

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,6 @@
         </div>
     </div>
     <div class='modal-bg hide' id='coin-modal'>
-        <div class='modal-spine'></div>
         <div class='modal-top-row'>
             <h1 class='modal-title'>Controle de leveduras | Coin</h1>
             <button class='modal-quit' id='coin-quit'>Voltar</button>
@@ -189,51 +188,63 @@
             <a class="modal-back" id='coin-back'>&#10094;</a>
             <a class="modal-forward" id='coin-forward'>&#10095;</a>
         </div>
-        <div class='modal-side'>
-            <p class='modal-description'>
-                Ferramenta desenvolvida para auxiliar o laboratório a controlar o estoque de leveduras vivas para
-                produção de cerveja artesanal
-            </p>
-            <p class='modal-description'>
-                Obs: O site é proprietário portanto não posso permitir acesso, mas posso disponibilizar o código para
-                visualização
-            </p>
+        <div class='modal-sidescroll-wrapper'>
+
+            <div class='modal-side'>
+                <p class='modal-description'>
+                    Ferramenta desenvolvida para auxiliar o laboratório a controlar o estoque de leveduras vivas para
+                    produção de cerveja artesanal
+                </p>
+                <p class='modal-description'>
+                    Obs: O site é proprietário portanto não posso permitir acesso, mas posso disponibilizar o código
+                    para
+                    visualização
+                </p>
+            </div>
+            <div class='modal-tech'>
+                <div class='main-column'>
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>&lt;/&gt;</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Django</li>
+                            <li class='modal-li'>Sqlite</li>
+                            <li class='modal-li'>Bootstrap</li>
+                            <li class='modal-li'>Jinja2</li>
+                        </ul>
+                    </div>
+
+                    <div class='modal-ul-div production-ul'>
+                        <h2 class='modal-ul-title'>~</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>3 Semanas de pesquisa e desenvolvimento</li>
+                            <li class='modal-li'>95 horas Codando</li>
+                            <li class='modal-li'>5kg de Miojo</li>
+                            <li class='modal-li'>Deploy no Heroku</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="secondary-column">
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>{ }</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Auth</li>
+                            <li class='modal-li'>Barra de busca</li>
+                            <li class='modal-li'>Filtros e Paginação</li>
+                            <li class='modal-li'>Histórico de Atividades</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class='modal-tech'>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Tecnologias</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Django</li>
-                    <li class='modal-li'>Sqlite</li>
-                    <li class='modal-li'>Bootstrap</li>
-                    <li class='modal-li'>Jinja2</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Recursos</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Auth</li>
-                    <li class='modal-li'>Barra de busca</li>
-                    <li class='modal-li'>Filtros e Paginação</li>
-                    <li class='modal-li'>Histórico de Atividades</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div production-ul'>
-                <h2 class='modal-ul-title'>Produção</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>3 Semanas de pesquisa e desenvolvimento</li>
-                    <li class='modal-li'>95 horas Codando</li>
-                    <li class='modal-li'>5kg de Miojo</li>
-                    <li class='modal-li'>Deploy no Heroku</li>
-                </ul>
-            </div>
+        <button class='side-scroll-btn' id='side-scroll-btn-coin'>+ Info</button>
+        <div class='modal-btn-wrapper'>
+            <a href='https://github.com/RodrigoCury/estoque-coin' target="_blank" rel="noopener noreferrer"
+                class='modal-a'>
+                <button class='modal-btn'>Github</button>
+            </a>
         </div>
-        <a href='https://github.com/RodrigoCury/estoque-coin' target="_blank" rel="noopener noreferrer">
-            <button class='modal-btn'>Github</button>
-        </a>
     </div>
     <div class='modal-bg hide' id='bioinformatizado-modal'>
-        <div class='modal-spine'></div>
         <div class='modal-top-row'>
             <h1 class='modal-title'>Bioinformatizado</h1>
             <button class='modal-quit' id='bioinformatizado-quit'>Voltar</button>
@@ -244,113 +255,138 @@
             <a class="modal-back" id='bioinformatizado-back'>&#10094;</a>
             <a class="modal-forward" id='bioinformatizado-forward'>&#10095;</a>
         </div>
-        <div class='modal-side'>
-            <p class='modal-description'>
-                Blog pessoal feito para eu manter um log sobre ferramentas e conceitos de bioinformática que estou
-                aprendendo e disseminar o conteúdo em português
-            </p>
+        <div class='modal-sidescroll-wrapper'>
+
+            <div class='modal-side'>
+                <p class='modal-description'>
+                    Blog pessoal feito para eu manter um log sobre ferramentas e conceitos de bioinformática que estou
+                    aprendendo e disseminar o conteúdo em português
+                </p>
+            </div>
+            <div class='modal-tech'>
+                <div class='main-column'>
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>&lt;/&gt;</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Django</li>
+                            <li class='modal-li'>Bootstrap</li>
+                            <li class='modal-li'>Sqlite</li>
+                            <li class='modal-li'>Jinja2</li>
+                        </ul>
+                    </div>
+                    <div class='modal-ul-div production-ul'>
+                        <h2 class='modal-ul-title'>~</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>2 Semanas desenvolvendo o conceito</li>
+                            <li class='modal-li'>65 horas Codando</li>
+                            <li class='modal-li'>Toneladas de Café</li>
+                            <li class='modal-li'>Deploy no Heroku</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="secondary-column">
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>{ }</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Auth</li>
+                            <li class='modal-li'>Categorias</li>
+                            <li class='modal-li'>Paginação</li>
+                            <li class='modal-li'>Custom tags</li>
+                            <li class='modal-li'>Recursos modulares para possíveis editores</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class='modal-tech'>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Tecnologias</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Django</li>
-                    <li class='modal-li'>Bootstrap</li>
-                    <li class='modal-li'>Sqlite</li>
-                    <li class='modal-li'>Jinja2</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Recursos</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Auth</li>
-                    <li class='modal-li'>Categorias</li>
-                    <li class='modal-li'>Paginação</li>
-                    <li class='modal-li'>Custom tags</li>
-                    <li class='modal-li'>Recursos modulares para possíveis editores</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div production-ul'>
-                <h2 class='modal-ul-title'>Produção</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>2 Semanas desenvolvendo o conceito</li>
-                    <li class='modal-li'>65 horas Codando</li>
-                    <li class='modal-li'>Toneladas de Café</li>
-                    <li class='modal-li'>Deploy no Heroku</li>
-                </ul>
-            </div>
+        <button class='side-scroll-btn' id='side-scroll-btn-bioinformatizado'>+ Info</button>
+        <div class='modal-btn-wrapper'>
+            <a href='https://bioinformatizado.herokuapp.com/' target="_blank" rel="noopener noreferrer" class='modal-a'>
+                <button class='modal-btn'>Acesse</button>
+            </a>
+            <a href='https://github.com/RodrigoCury/DjangoBlog' target="_blank" rel="noopener noreferrer"
+                class='modal-a'>
+                <button class='modal-btn'>Github</button>
+            </a>
         </div>
-        <a href='https://bioinformatizado.herokuapp.com/' target="_blank" rel="noopener noreferrer">
-            <button class='modal-btn'>Acesse</button>
-        </a>
-        <a href='https://github.com/RodrigoCury/DjangoBlog' target="_blank" rel="noopener noreferrer">
-            <button class='modal-btn'>Github</button>
-        </a>
     </div>
+
     <div class='modal-bg hide' id='bioinfo-project-modal'>
-        <div class='modal-spine'></div>
         <div class='modal-top-row'>
             <h1 class='modal-title'>Projeto de Bioinformática</h1>
             <button class='modal-quit' id='bioinfo-project-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
             <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-1.png">
-            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-2.png">
-            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-3.png">
-            <img class='modal-img-bioinfop' src="/static/imgs/bioInfoP-4.png">
+            <img class='modal-img-bioinfop hide' src="/static/imgs/bioInfoP-2.png">
+            <img class='modal-img-bioinfop hide' src="/static/imgs/bioInfoP-3.png">
+            <img class='modal-img-bioinfop hide' src="/static/imgs/bioInfoP-4.png">
 
             <a class="modal-back" id='bioinfop-back'>&#10094;</a>
             <a class="modal-forward" id='bioinfop-forward'>&#10095;</a>
         </div>
-        <div class='modal-side'>
-            <p class='modal-description'>
-                Playground pessoal para aplicar tecnologias de bioinformática e disponibilizar o acesso pra quem tiver
-                interesse
-            </p>
-            <p class='modal-description'>
-                Sempre que aprendo uma tecnologia nova tento aplicar de maneira interessante neste site e assim reforçar
-                o conhecimento
-            </p>
-            <p class='modal-description'>
-                Obs: É Um projeto em constante Desenvolvimento e em breve o portarei do Flask para Django.
-            </p>
+        <div class='modal-sidescroll-wrapper'>
+
+            <div class='modal-side'>
+                <p class='modal-description'>
+                    Playground pessoal para aplicar tecnologias de bioinformática e disponibilizar o acesso pra quem
+                    tiver
+                    interesse
+                </p>
+                <p class='modal-description'>
+                    Sempre que aprendo uma tecnologia nova tento aplicar de maneira interessante neste site, e assim
+                    reforçar
+                    o conhecimento
+                </p>
+                <p class='modal-description'>
+                    Obs: É Um projeto em constante desenvolvimento e em breve o portarei do Flask para Django.
+                </p>
+            </div>
+            <div class='modal-tech'>
+                <div class='main-column'>
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>&lt;/&gt;</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Flask</li>
+                            <li class='modal-li'>Biopython</li>
+                            <li class='modal-li'>Sqlite</li>
+                            <li class='modal-li'>SQL-Alchemy</li>
+                            <li class='modal-li'>Python Built-in Dataclasses</li>
+                        </ul>
+                    </div>
+                    <div class='modal-ul-div production-ul'>
+                        <h2 class='modal-ul-title'>~</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Incontáveis dias estudando</li>
+                            <li class='modal-li'>Código refatorado pra todo canto</li>
+                            <li class='modal-li'>Várias noites abandonando a cama</li>
+                            <li class='modal-li'>Deploy no Heroku</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="secondary-column">
+                    <div class='modal-ul-div'>
+                        <h2 class='modal-ul-title'>{ }</h2>
+                        <ul class='modal-ul'>
+                            <li class='modal-li'>Alinhamento de Sequências</li>
+                            <li class='modal-li'>Tradução e transcrição de sequência</li>
+                            <li class='modal-li'>Informações interessantes acerca das sequências</li>
+                            <li class='modal-li'>Todas as submissões ficam salvas por um período de tempo</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class='modal-tech'>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Tecnologias</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Flask</li>
-                    <li class='modal-li'>Biopython</li>
-                    <li class='modal-li'>Sqlite</li>
-                    <li class='modal-li'>SQL-Alchemy</li>
-                    <li class='modal-li'>Python Built-in Dataclasses</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div'>
-                <h2 class='modal-ul-title'>Recursos</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Alinhamento de Sequências</li>
-                    <li class='modal-li'>Tradução e transcrição de sequência</li>
-                    <li class='modal-li'>Informações interessantes acerca das sequências</li>
-                    <li class='modal-li'>Todas as submissões ficam salvas por um período de tempo</li>
-                </ul>
-            </div>
-            <div class='modal-ul-div production-ul'>
-                <h2 class='modal-ul-title'>Produção</h2>
-                <ul class='modal-ul'>
-                    <li class='modal-li'>Incontáveis dias estudando</li>
-                    <li class='modal-li'>Código refatorado pra todo canto</li>
-                    <li class='modal-li'>Várias noites abandonando a cama</li>
-                    <li class='modal-li'>Deploy no Heroku</li>
-                </ul>
-            </div>
+        <button class='side-scroll-btn' id='side-scroll-btn-bioinfop'>+ Info</button>
+        <div class='modal-btn-wrapper'>
+            <a href='https://bioinformatic-project.herokuapp.com/' target="_blank" rel="noopener noreferrer"
+                class='modal-a'>
+                <button class='modal-btn'>Acesse</button>
+            </a>
+            <a href='https://github.com/RodrigoCury/bioinformatic-project' target="_blank" rel="noopener noreferrer"
+                class='modal-a'>
+                <button class='modal-btn'>Github</button>
+            </a>
         </div>
-        <a href='https://bioinformatic-project.herokuapp.com/' target="_blank" rel="noopener noreferrer">
-            <button class='modal-btn'>Acesse</button>
-        </a>
-        <a href='https://github.com/RodrigoCury/bioinformatic-project' target="_blank" rel="noopener noreferrer">
-            <button class='modal-btn'>Github</button>
-        </a>
     </div>
 
     <div class='made-with-container hide'>
@@ -361,7 +397,7 @@
         </div>
         <div class='made-with-wrapper'>
             <ul class='made-with-ul' id='made-with-tech'>
-                <h2 class='made-with-header'>Tecnologias</h2>
+                <h2 class='made-with-header'>&lt;/&gt;</h2>
                 <li class='made-with-li'>Three.JS</li>
                 <li class='made-with-li'>GSAP</li>
                 <li class='made-with-li'>Howler</li>
@@ -371,7 +407,7 @@
                 <li class='made-with-li'>Audacity</li>
             </ul>
             <ul class='made-with-ul' id='made-with-trivia'>
-                <h2 class='made-with-header'>Desenvolvimento</h2>
+                <h2 class='made-with-header'>~</h2>
                 <li class='made-with-li'>150+ Hrs desenvolvendo o conceito</li>
                 <li class='made-with-li'>100+ Horas codando</li>
                 <li class='made-with-li'>Bastante Aprendizado</li>
@@ -379,7 +415,13 @@
                 <li class='made-with-li'>Várias danças de comemoração</li>
             </ul>
             <ul class='made-with-ul' id='made-with-music'>
-                <h2 class='made-with-header'>Músicas</h2>
+                <h2 class='made-with-header'>
+                    <svg class='song' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M15 0L5 1.7v11c-.3-.2-.7-.3-1.2-.3-.6 0-1.3.3-1.9.7-.6.4-1 1-1 1.6 0 .4.2.7.4.9.4.3.8.4 1.2.4.6 0 1.4-.3 1.9-.7.6-.4 1-1 1-1.7V3l9.2-1.6v9.7c-.3-.2-.7-.3-1.2-.3-.6 0-1.3.3-1.9.7-.6.4-1 1-1 1.6 0 .4.2.7.4.9.3.2.6.3 1.1.3.6 0 1.4-.3 1.9-.7.6-.4 1-1 1-1.7L15 0z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                </h2>
                 <li class='made-with-li'>
                     'The Journey' por
                     <a href="https://pixabay.com/users/astrofreq-19902647/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=2582"
@@ -406,7 +448,7 @@
                 </li>
             </ul>
             <ul class='made-with-ul' id='made-with-thanks'>
-                <h2 class='made-with-header'>Agradecimentos</h2>
+                <h2 class='made-with-header'>💙</h2>
                 <li class='made-with-li'>Amigos e Família pelo apoio e opiniões construtivas</li>
                 <li class='made-with-li'>
                     <a href="https://bruno-simon.com/" target="_blank" rel="noopener noreferrer">
