--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/static/ico/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/ico/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/static/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Title -->
