--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Title -->
-    <title>Portifolio</title>
+    <title> 🚀 Rodrigo Cury | Portifólio</title>
 </head>
 
 <body>
