Added quality Choice

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,11 @@
                 <p class='load-texts'>Carregando</p>
             </div>
             <div class='load-bar'></div>
-            <button class='exit-load-btn hide'>Decolar</button>
+            <div class="quality-selector hide">
+                <button class='exit-load-btn' id='low'>Baixa</button>
+                <button class='exit-load-btn' id='medium'>Média</button>
+                <button class='exit-load-btn' id='high'>Alta</button>
+            </div>
         </div>
         <div class='exp-div'>
             <p class='exp-p'>Use Chrome em um Desktop para uma melhor experiência</p>
