Esqueci disso mesmo?

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,12 @@
     <div class='projects-wrapper'>
       <h1 class='projects-header'>Meu dia a dia no trabalho</h1>
       <p class='projects-header sub'>
-        Trabalho para como Dev terceirizado para a plataforma de gestão LGPD
+        Trabalho para 
+        <a href="https://pixabay.com/music/modern-classical-dreamy-piano-soft-sound-ambient-background-4049/"
+        target="_blank" rel="noopener noreferrer">
+          WS Work!
+        </a> 
+        como Dev terceirizado para a plataforma de gestão LGPD
         <a href='https://privacytools.com.br/' target="_blank" rel="noopener noreferrer">
           Privacy Tools
         </a>
