--- a/src/index.html
+++ b/src/index.html
@@ -183,8 +183,8 @@
       </p>
       <p class='projects-p'>
         Meus maiores impactos na plataforma, foram melhorias às ferramentas gestão de riscos para a área de Governança e
-        Compliance.
-        <br />
+        Compliance;
+        Uma Biblioteca de Auditoria que conecta em qualquer aplicação Spring (Boot ou WebFlux);
         Geração de relatórios modulares de análise de impacto de ativos, Automatização de Due Diligences, Gestão de
         documentos, Gestão de Auditoria.
       </p>
